# va-mobile-app

./: .gitignore  404.html  BACKEND_API_INVESTIGATION.md  INVESTIGATION_README.md  INVESTIGATION_SUMMARY.md  Implementation Plan  MEDICATIONS_API_V2_QA_SUMMARY.md  MEDICATION_DATA_FLOW_ANALYSIS.md  QA_TESTING_GUIDE.md  README.md  REFILL_FUNCTIONALITY_INVESTIGATION.md  TESTING.md  a11y.sh  api.html  axe-scan.js  dependencies.txt  event.json  index.html  lunr-index-1659583940389.json  lunr-index-1659670531067.json  lunr-index-1659756467877.json  lunr-index-1659842989719.json  lunr-index-1659929670183.json  lunr-index-1660016143333.json  lunr-index-1660101698451.json  lunr-index-1660188511779.json  lunr-index-1660275190060.json  lunr-index-1660361358257.json  lunr-index-1660447973516.json  lunr-index-1660535180992.json  lunr-index-1660620997777.json  lunr-index-1660708009533.json  lunr-index-1660794483172.json  lunr-index-1660880442115.json  lunr-index-1660966455369.json  lunr-index-1661052868181.json  lunr-index-1661140009281.json  lunr-index-1661226711159.json  lunr-index-1661313002154.json  lunr-index-1661399504807.json  (+3178 more)
.circleci/: build.yml  config.yml
.devcontainer/: devcontainer.json
.github/: .yamllint.yml  CODEOWNERS  PRODUCTION_SETUP.md  actionlint.yml  codeql.yml  dependabot.yml  emass.json  moveIssue.js  move_issue.yml  pull_request_template.md  test13.yml  test20.yml
AdhocVAAssistant/: .gitignore  Readme.md  app.json  babel.config.js  docker-compose.yml  jest.config.js  metro.config.js  package-lock.json  (+5 more)
ai/mobileDoc/: README.md  main.py  pyproject.toml
(+12465 files in other folders)
